# qbo-mcp

./: .clinerules  .env.example  .gitignore  MCP_docs.md  README.md  main.py  pyproject.toml  python-quickbooks-readme.md  qbo_tokens.json  quickbooks-online-mcp.code-workspace  requirements.txt  tree.md  tree.txt
.cursor/: mcp.json
.roo/architect/: project_structure_proposal.md
.roo/rules/: architecture.md  commits.md
architect/: project_structure_proposal.md
docs/: FastMCP_2.9.0_docs.md  account_object.md  python-quickbooks_README.md  qbo_api_overview.md  qbo_api_scraped_docs.md
src/qbo_mcp/: __init__.py  __main__.py  auth.py  config.py  models.py  oauth_flow.py  qbo_tokens.json  reports.py  schemas.py  server.py  tools.py
src/qbo_mcp/api/: __init__.py  prompts.py
src/qbo_mcp/api/tools/: __init__.py  reports.py  resources.py
src/qbo_mcp/config/: __init__.py  config.py
src/qbo_mcp/models/: __init__.py  common.py  tools.py
src/qbo_mcp/services/: __init__.py  qbo.py  qbo_client.py  reports.py  resources.py
src/qbo_mcp/utils/: __init__.py  auth.py  formatting.py
tests/: test_report_tools.py  test_server.py  test_tools.py
